# film-assistant

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
luts/: Cool_Blue_Steel___Free_Moody_Cold_LUT (1).cube  Faded_Kodak___Free_Film_Emulation_LUT.cube  High_Contrast___Free_Bold_Cinematic_LUT.cube  Matte_Fade___Free_Film_Matte_LUT.cube
public/luts/: infrared-magenta.cube  rgb-screen.cube  warm-golden-hour.cube
scripts/: generate-infrared-magenta-lut.mjs  generate-rgb-screen-lut.mjs
src/: App.tsx  i18n.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ControlRow.tsx
src/data/: mockStyles.ts
src/hooks/: useAdjustedImage.ts  usePhotoAnalysis.ts
src/native/: desktop.ts
src/pages/: StyleLearning.tsx  Workspace.tsx
src/utils/: analyzeImage.ts  cubeLut.ts  exportImageFile.ts  personCutout.ts  renderImageAdjustments.ts
