[package]
name = "film-assistant"
version = "0.1.0"
description = "Local RAW film colour workspace"
authors = ["Film Assistant"]
edition = "2021"

[lib]
name = "film_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"

